# origin-mcp-transfer-kit

./: .gitignore  LICENSE  README-傻瓜版.md  README.md  平台兼容性说明.md
docs/: AI-HANDOFF.md
hana-config-example/: origin-mcp-connector.example.json
origin-mcp-src/: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  README.zh.md  addon.py  pyproject.toml
origin-mcp-src/.github/workflows/: ci.yml
origin-mcp-src/docs/: mcp-config.md  origin-bridge.md  origin-ui-buttons.md  tools.md
origin-mcp-src/docs/agentic/: origin-mcp-bootstrap-claude.md  origin-mcp-bootstrap-codex.md  origin-mcp-bootstrap.md
origin-mcp-src/examples/: sample_data.csv  smoke_bridge.py  xyz_data.csv
origin-mcp-src/scripts/: build_official_docs_version_diffs.py  build_origin_app.py  compare_official_docs_index.py  stop-bridge.cmd  stop_bridge.py  update_official_docs_index.py
origin-mcp-src/src/origin_mcp/: __init__.py  _bridge_dispatch.py  _bridge_protocol.py  _bridge_server.py  _bridge_tasks.py  analysis_adapters.py  analysis_outputs.py  bridge.py  bridge_client.py  bridge_handshake.py  chart_palette.py  chart_router.py  compat.py  errors.py  file_io.py  image_quality.py  knowledge.py  knowledge_entries.py  lcpmgh_palettes.py  logging_config.py  models.py  official_docs.generated.json  official_docs.py  official_docs.version_diffs.json  origin_client.py  plot_style_registry.py  refs.py  runtime.py  server.py  template_library.py  text_format.py
origin-mcp-src/src/origin_mcp/client/: __init__.py  analysis.py  base.py  export.py  graph_formatting.py  graph_formatting_helpers.py  graph_style.py  lifecycle.py  plot_routing.py  table_plot.py  worksheet.py
origin-mcp-src/src/origin_mcp/style_capabilities/: __init__.py  area_pie.json  column_bar.json  core.json  distribution.json  errorbar.json  field_color.json  financial.json  image.json  specialized.json  three_d.json
origin-mcp-src/src/origin_mcp/tools/: __init__.py  _shared.py  analysis.py  bridge.py  figurespec.py  graph.py  knowledge.py  lifecycle.py  plotting.py  plotting_basic.py  plotting_plot_ids.py  plotting_routing.py  plotting_shared.py  templates.py  transform.py  worksheet.py
origin-mcp-src/tests/: conftest.py  fake_origin.py  test_addon.py  test_analysis_adapters.py  test_analysis_helpers.py  test_analysis_run.py  test_bridge.py  test_bridge_concurrency.py  test_bridge_handshake.py  test_chart_router.py  test_compat.py  test_docs_dedup.py  test_figurespec.py  test_graph_mixin.py  test_knowledge.py  test_lifecycle_mixin.py  test_models.py  test_official_docs.py  test_origin_app_packaging.py  test_origin_client.py  test_plot_routing.py  test_runtime.py  test_server.py  test_table_plot_helpers.py  test_template_library.py  test_text_format.py  test_tool_registration.py  test_transform_mixin.py  test_worksheet_mixin.py
scripts/: build-origin-app.ps1  check-origin-mcp.ps1  install-origin-mcp.ps1
